5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4126/executions/1575_1334.log
== SUBMITION (2019-03-13 22:37:54) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 16 % 2)

print("Potenciacao: ", 2 ** 3 )
-- EXECUTION TIME:
0.114581
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  0
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:57:33) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 16 % 2)

print("Potenciacao: ", 2 ** 3 )
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:57:54) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2,0)

print("Resto: ", 16 % 2)

print("Potenciacao: ", 2 ** 3 )
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8 0
Resto:  0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:58:01) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2,)

print("Resto: ", 16 % 2)

print("Potenciacao: ", 2 ** 3 )
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:58:59) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2,1)

print("Resto: ", )

print("Potenciacao: ", 2 ** 3 )
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8 1
Resto: 
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:59:06) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", )

print("Potenciacao: ", 2 ** 3 )
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto: 
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:59:26) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", % 8 )

print("Potenciacao: ", 2 ** 3 )
-- ERROR:
File "XXXX", line 9
    print("Resto: ", % 8 )
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:59:37) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 40 % 8 )

print("Potenciacao: ", 2 ** 3 )
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:59:44) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 41 % 8 )

print("Potenciacao: ", 2 ** 3 )
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  1
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:01:33) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 89 % 9 )

print("Potenciacao: ", 2 ** 3 )
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:01:37) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 89 % 9 )

print("Potenciacao: ", 2 ** 3 )
-- EXECUTION TIME:
0.188615
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:01:51) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2,0)

print("Resto: ", 89 % 9 )

print("Potenciacao: ", 2 ** 3 )
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8 0
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:01:54) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2,0)

print("Resto: ", 89 % 9 )

print("Potenciacao: ", 2 ** 3 )
-- EXECUTION TIME:
0.194986
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8 0
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 10:02:08) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 9 - 1)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2,0)

print("Resto: ", 40//5 )

print("Potenciacao: ", 2 ** 3 )
-- EXECUTION TIME:
0.151291
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8 0
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 10:02:23) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2,0)

print("Resto: ", 40//5 )

print("Potenciacao: ", 2 ** 3 )
-- EXECUTION TIME:
0.1643
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8 0
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 10:02:45) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 / 2)

print("Resto: ", 40//5 )

print("Potenciacao: ", 2 ** 3 )
-- EXECUTION TIME:
0.150538
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
